    * 0808 brocade_mlx*: Checks now also work correctly with Brocade ADX / FGS / ICX devices
    * 0892 wagner_titanus_topsense: new info check and overall status check for Wagner Titanus Top Sens devices
    * 0893 wagner_titanus_topsense.alarm: New check for Alarms Triggered on Wagner Titanus Top Sens devices
    * 0777 FIX: special agent emcvnx: did not work with security file authentication...
    * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
    * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
    * 0787 FIX: df: fixed problems on some filesystem checks when legacy check parameters where used...
    * 0803 FIX: agent_ibmsvc: raw data for System Info Check and License Check now in correct format...
    * 0788 FIX: oracle_tablespaces: now able to bear None values as warn/crit levels...
    * 0789 FIX: oracle_tablespaces: fixed bug when using dynamic filesystem levels...
    * 0603 FIX: cmciii checks: more general scan function plus perf-o-meters for humidity and temperature checks
    * 0604 FIX: windows_updates: now handles situations with forced reboot and no limits correctly
    * 0605 FIX: enterasys_cpu_util enterasys_lsnat: syntax fixes
    * 0889 FIX: logwatch: fix case where rule wouldn't be applied...
    * 0882 FIX: check_bi_local.py: fix crash in case of non-ascii characters...
    * 0606 FIX: apache_status: now also sends an accept header to make it work with mod_security enables servers
    * 0832 FIX: solaris_mem: fixed invalid calculation of total swap...

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)
    * 0887 Add new column painter "Host Notifications Enabled"...

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0880 Added support for 389 Directory Server to LDAP connector
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
