@@ -1,0 +1,8 @@
+Title: wagner_titanus_topsense.smoke: New check for Smoke Detectors in Wagner Titanus Top Sens devices
+Level: 1
+Component: checks
+Version: 1.2.5i3
+Date: 1397738763
+Class: feature
+
+
